--- a/README.Rmd
+++ b/README.Rmd
@@ -36,6 +36,12 @@ You can install the released version of moexer from [CRAN](https://CRAN.R-projec
 install.packages("moexer")
 ```
 
+or the latest version from github:
+
+``` r
+devtools::install_github("x1o/moexer")
+```
+
 ## Example
 
 Suppose you want to download monthly candles from Jan 1, 2020 until the present 
